<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:textStyle="bold"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_space"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ping_str"
        android:id="@+id/button_ping"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="pingDst" />

    <EditText android:id="@+id/edit_message_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/edit_message_ping_str" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_space" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@android:color/holo_red_dark"
            android:text="@string/left_header_str" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:textColor="@android:color/background_light"
            android:background="@android:color/holo_green_dark"
            android:text="@string/middle_header_str" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/right_header_str" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dest_ip"
        android:text="@string/text_space"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video_str"
        android:id="@+id/button_video"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="videoDst"/>

    <EditText
        android:id="@+id/edit_message_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/edit_message_video_str"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_space"/>
</LinearLayout>
